# summerchild-llm

./: .gitignore  AGENT_CONTRACT.md  README.md  questions.json  summerchild.py
agent/: .env.example  .gitignore  OVERNIGHT_STATUS.md  README.md  pyproject.toml
agent/scripts/: push_default_values.py  push_variables.py
agent/src/summerchild_agent/: __init__.py  agent.py  budget.py  logfire_config.py  managed_vars.py  models.py  rubric.py  server.py  state.py
agent/tests/: test_budget.py  test_models.py  test_rubric.py
static-walker/: summerchild.py
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/components/: Chat.tsx  ScoreSidebar.tsx  TransparencyBlurb.tsx
web/src/lib/: api.ts  use-conversation-id.ts
