[project]
name = "summerchild-agent"
version = "0.1.0"
description = "Conversational AI agent for the Sweet Summer Child Score risk-assessment quiz"
authors = [
    { name = "Laura Summers", email = "summerscope@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "logfire[system-metrics]>=4.37.0",
    "pydantic-ai>=1.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# RUF001/002/003 flag "ambiguous" unicode chars in strings — but we use
# proper typography (em-dash, minus, × ) in user-facing prompts and report
# output on purpose. Keep them.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]
